--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -45,6 +45,7 @@
     <color name="colorPaymentStatusBg">#D4EFD0</color>
     <color name="colorPaymentStatusText">#278515</color>
     <color name="colorPaymentHistoryRowBg">#F8F5FA</color>
+    <color name="skip_solid">#F4F4F8</color>
 
 
 
