--- a/app/src/main/res/layout/row_center.xml
+++ b/app/src/main/res/layout/row_center.xml
@@ -1,64 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:padding="@dimen/dimen_7"
-    android:layout_margin="@dimen/dimen_5"
-    android:background="@drawable/rating_bg"
-    android:backgroundTint="@color/colorBranchBg1">
+<layout>
+    <data>
+        <variable
+            name="fitnessCenter"
+            type="com.htf.diva.models.AppDashBoard.FitnessCenter" />
+
+        <import type="android.view.View"/>
+    </data>
 
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_height="@dimen/dimen_130"
+        android:gravity="center"
+        android:orientation="vertical"
         android:padding="@dimen/dimen_7"
-        android:gravity="center">
+        android:layout_margin="@dimen/dimen_5"
+        android:background="@drawable/rating_bg"
+        android:backgroundTint="@color/colorBranchBg1">
 
-        <ImageView
-            android:layout_width="@dimen/dimen_30"
-            android:layout_height="@dimen/dimen_30"
-            android:src="@drawable/center_image_1"
-            android:layout_gravity="center_vertical"/>
-
-        <TextView
-            android:id="@+id/tvBranchName"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:maxLines="2"
-            android:text="gfchsgfd"
-            android:textSize="@dimen/font_12sp"
-            android:fontFamily="@font/avenir_black"
-            android:textColor="@color/colorBranchText1"/>
+            android:orientation="horizontal"
+            android:padding="@dimen/dimen_7"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="@dimen/dimen_70"
+                android:layout_height="@dimen/dimen_70"
+                fitnessCenterImage="@{fitnessCenter.image}"
+                android:src="@drawable/center_image_1"
+                android:layout_gravity="center_vertical"/>
+
+            <TextView
+                android:id="@+id/tvBranchName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:maxLines="2"
+                userName="@{fitnessCenter.name}"
+                android:textSize="@dimen/font_12sp"
+                android:fontFamily="@font/avenir_black"
+                android:textColor="@color/colorBranchText1"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/branch_location_bg"
+            android:padding="@dimen/dimen_7">
+
+            <ImageView
+                android:layout_width="@dimen/dimen_15"
+                android:layout_height="@dimen/dimen_15"
+                android:src="@drawable/location"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:maxLines="2"
+                userName="@{fitnessCenter.location}"
+                android:textSize="@dimen/font_10sp"
+                android:layout_marginStart="@dimen/dimen_5"
+                android:fontFamily="@font/avenir_light"
+                android:textColor="@color/colorPrimaryDark"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/branch_location_bg"
-        android:padding="@dimen/dimen_7">
+</layout>
 
-       <ImageView
-           android:layout_width="@dimen/dimen_15"
-           android:layout_height="@dimen/dimen_15"
-           android:src="@drawable/location"/>
 
-        <TextView
-            android:id="@+id/tvBranchLocation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:maxLines="2"
-            android:text="gfchsgfd"
-            android:textSize="@dimen/font_12sp"
-            android:layout_marginStart="@dimen/dimen_5"
-            android:fontFamily="@font/avenir_light"
-            android:textColor="@color/colorPrimaryDark"/>
 
-    </LinearLayout>
-
-</LinearLayout>
