--- a/app/src/main/res/layout/row_personal_trainers.xml
+++ b/app/src/main/res/layout/row_personal_trainers.xml
@@ -1,153 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginStart="@dimen/dimen_5"
-    android:layout_marginEnd="@dimen/dimen_5"
-    android:layout_marginTop="@dimen/dimen_5"
-    android:padding="@dimen/dimen_7"
-    android:orientation="vertical"
-    android:background="@drawable/personal_trainer_stroke_bg">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <variable
+            name="topTrainer"
+            type="com.htf.diva.models.AppDashBoard.TopTrainer" />
+        <import type="android.view.View"/>
+    </data>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/dimen_200"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <com.github.siyamed.shapeimageview.RoundedImageView
-            android:id="@+id/ivTrainerImage"
-            android:layout_width="@dimen/dimen_50"
-            android:layout_height="@dimen/dimen_50"
-            android:src="@drawable/female"
-            app:siRadius="@dimen/dimen_7"
-            app:siSquare="true"/>
+        android:layout_marginStart="@dimen/dimen_5"
+        android:layout_marginEnd="@dimen/dimen_5"
+        android:layout_marginTop="@dimen/dimen_5"
+        android:padding="@dimen/dimen_7"
+        android:orientation="vertical"
+        android:background="@drawable/personal_trainer_stroke_bg">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginStart="@dimen/dimen_5"
-            android:padding="@dimen/dimen_5">
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tvTrainerName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="shivani"
-                android:textSize="@dimen/font_13sp"
-                android:textColor="@color/colorPrimaryDark"
-                android:fontFamily="@font/avenir_black" />
-
-            <TextView
-                android:id="@+id/tvPricePerSession"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="shivani"
-                android:textSize="@dimen/font_13sp"
-                android:textColor="@color/colorPrimary"
-                android:fontFamily="@font/avenir_black" />
+            <com.github.siyamed.shapeimageview.RoundedImageView
+                android:id="@+id/ivTrainerImage"
+                android:layout_width="@dimen/dimen_50"
+                android:layout_height="@dimen/dimen_50"
+                android:src="@drawable/user"
+                trainerImage="@{topTrainer.image}"
+                app:siRadius="@dimen/dimen_10" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:id="@+id/llRating"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="@dimen/dimen_5"
-                    android:background="@drawable/rating_bg"
-                    android:padding="@dimen/dimen_5"
-                    android:layout_gravity="center_vertical">
-
-                    <ImageView
-                        android:layout_width="@dimen/dimen_10"
-                        android:layout_height="@dimen/dimen_10"
-                        android:src="@drawable/review"
-                        android:layout_gravity="center_vertical"/>
-
-                    <TextView
-                        android:id="@+id/tvRating"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="shivani"
-                        android:layout_marginStart="@dimen/dimen_3"
-                        android:textSize="@dimen/font_10sp"
-                        android:layout_gravity="center_vertical"
-                        android:textColor="@color/colorPrimary"
-                        android:fontFamily="@font/avenir_light" />
-
-                </LinearLayout>
+                android:orientation="vertical"
+                android:layout_marginStart="@dimen/dimen_5"
+                android:padding="@dimen/dimen_5">
 
                 <TextView
-                    android:id="@+id/tvReview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="shivani"
-                    android:layout_marginStart="@dimen/dimen_5"
-                    android:textSize="@dimen/font_12sp"
-                    android:layout_gravity="center_vertical"
+                    userName="@{topTrainer.name}"
+                    android:textSize="@dimen/font_13sp"
                     android:textColor="@color/colorPrimaryDark"
-                    android:fontFamily="@font/avenir_light" />
+                    android:fontFamily="@font/avenir_black" />
+
+                <TextView
+                    android:layout_marginTop="@dimen/margin_4dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    amount="@{topTrainer.perSessionPrice}"
+                    android:textSize="@dimen/font_12sp"
+                    android:textColor="@color/colorPrimary"
+                    android:fontFamily="@font/avenir_black" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:id="@+id/llRating"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="@dimen/dimen_5"
+                        android:layout_marginBottom="@dimen/dimen_5"
+                        android:background="@drawable/rating_bg"
+                        android:padding="@dimen/dimen_5"
+                        android:layout_gravity="center_vertical">
+
+                        <ImageView
+                            android:layout_width="@dimen/dimen_10"
+                            android:layout_height="@dimen/dimen_10"
+                            android:src="@drawable/review"
+                            android:layout_gravity="center_vertical"/>
+
+                        <TextView
+                            android:id="@+id/tvRating"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            userName="@{topTrainer.rating}"
+                            android:layout_marginStart="@dimen/dimen_3"
+                            android:textSize="@dimen/font_10sp"
+                            android:layout_gravity="center_vertical"
+                            android:textColor="@color/colorPrimary"
+                            android:fontFamily="@font/avenir_light" />
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/tvReview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        userName="@{topTrainer.totalReviews.toString()}"
+                        android:layout_marginStart="@dimen/dimen_5"
+                        android:textSize="@dimen/font_12sp"
+                        android:layout_gravity="center_vertical"
+                        android:gravity="center_vertical"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:fontFamily="@font/avenir_light" />
 
 
 
-
-
-
-
-</LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:padding="@dimen/dimen_7">
-
-            <ImageView
-                android:layout_width="@dimen/dimen_10"
-                android:layout_height="@dimen/dimen_10"
-                android:src="@drawable/location"
-                android:layout_gravity="center_vertical"/>
-
-            <TextView
-                android:id="@+id/tvLocation"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ghfhgfgh"
+                android:orientation="horizontal"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:padding="@dimen/dimen_7">
+
+                <ImageView
+                    android:layout_width="@dimen/dimen_10"
+                    android:layout_height="@dimen/dimen_10"
+                    android:src="@drawable/location"
+                    android:layout_gravity="center_vertical"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="@dimen/font_10sp"
+                    userName="@{topTrainer.location}"
+                    android:textColor="@color/colorText"
+                    android:fontFamily="@font/avenir_light"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="@dimen/dimen_5"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:text="@string/book"
                 android:textSize="@dimen/font_10sp"
-                android:textColor="@color/colorText"
-                android:fontFamily="@font/avenir_light"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="@dimen/dimen_5"/>
+                android:textColor="@color/white"
+                android:paddingTop="@dimen/dimen_5"
+                android:paddingBottom="@dimen/dimen_5"
+                android:paddingStart="@dimen/dimen_15"
+                android:paddingEnd="@dimen/dimen_15"
+                android:background="@drawable/rating_bg"
+                android:backgroundTint="@color/colorPrimary"/>
 
-        </LinearLayout>
+        </RelativeLayout>
+    </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:text="@string/book"
-            android:textSize="@dimen/font_12sp"
-            android:textColor="@color/white"
-            android:paddingTop="@dimen/dimen_5"
-            android:paddingBottom="@dimen/dimen_5"
-            android:paddingStart="@dimen/dimen_15"
-            android:paddingEnd="@dimen/dimen_15"
-            android:background="@drawable/rating_bg"
-            android:backgroundTint="@color/colorPrimary"/>
 
-    </RelativeLayout>
-</LinearLayout>
+</layout>
+
