--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -70,6 +70,7 @@
     <dimen name="dimen_70">70dp</dimen>
     <dimen name="dimen_400">400dp</dimen>
     <dimen name="dimen_300">300dp</dimen>
+    <dimen name="font_9sp">9sp</dimen>
 
 
 </resources>
